proposition de liste de présence final

--- a/index.html
+++ b/index.html
@@ -2,10 +2,164 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<title>lettre de motivation</title>
+		<title>liste de présence</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
-		<!-- Insert your code here -->
+		<header>
+            
+        </header>
+        <div class="elmt1">
+        <p>Développeur Web  <span class="right">Date du jour:</span></p> 
+        <p><span class="nom">Liste de présence</span> <span class="right">Formateur:</span></p> 
+        </div>
+        <div class="trait"></div>
+
+        <table>
+           
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th> Nom(s) et prénom(s)</th>
+                    <th> Heure d'arrivée</th>
+                    <th> Signature</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td><span class="nom">AGBODE</span>  Lydéric</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td><span class="nom">BAMENOU</span> Lily Edwige</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><span class="nom">BELLA AKOMEZOGHE</span> Jean-charles</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td><span class="nom">EDOU EDOU</span> Glenn Darby</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td><span class="nom">IBABO-ISSOUDI</span> Youri-Mendoza</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td><span class="nom">IKAMBA</span> Maximus Germain</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td><span class="nom">IVEKE DA SILVA</span> Wilfrid</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td><span class="nom">LEKOGHO MANGONGO</span> Druide</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td><span class="nom">LOUEMBET-ZE​</span> Charles Etienne</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td><span class="nom">MAKAYA DIBOTI​</span> Ismaël Samarange</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td><span class="nom">MBOUMBA MBOUMBA​</span> Evans Yeni</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td><span class="nom">MENVIE​</span> Juste</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td><span class="nom">MIHINDOU NZE​</span> Arsène Steed</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td><span class="nom">MOUCKEYTOU MOULONGUI</span>​ Sabil Mohammed</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td><span class="nom">MOUELLY ADINSI</span>​ Christ Ange Fourier</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td><span class="nom">MOUILA</span>​ Wilfried</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td><span class="nom">MOUSSOUNDA</span>​ Yanick</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>18</td>
+                    <td><span class="nom">NDOMBI ABDUL​</span> Rahmatullah</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>19</td>
+                    <td><span class="nom">NDOMBI SAMASSI​</span> Abiba</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>20</td>
+                    <td><span class="nom">NGALI ALANDJI​</span> Prisca Nadège</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>21</td>
+                    <td><span class="nom">NGUELE​</span> Joyce</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>22</td>
+                    <td><span class="nom">NZAHOU EKOMY​</span> Brigitte Cécilia</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
 	</body>
+	<footer>ecole 241, plus qu'une formation, un métier</footer>
 </html>
