--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 		<title>liste de présence</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
-    <main>
-        <body>
+    
+    <body>
+        <main>
             <header>
-                
+                <div class="red"></div>
             </header>
             <div class="elmt1">
             <p>Développeur Web  <span class="right">Date du jour:</span></p> 
@@ -161,7 +162,9 @@
                     </tr>
                 </tbody>
             </table>
-        </body>
-        <footer>ecole 241, plus qu'une formation, un métier</footer>
-    </main>
+            <p class="footer">ecole 241, plus qu'une formation, un métier</p>
+        </main>
+    </body>
+    <footer></footer>
+
 </html>
